[gd_scene load_steps=10 format=4 uid="uid://dk2x2mx8kafsn"]

[ext_resource type="TileSet" uid="uid://c0fh2yuw37u4s" path="res://Environment/tileset.tres" id="1_b5gln"]
[ext_resource type="Script" uid="uid://cwxc5cdnko0gd" path="res://Levels/ThreeLoop/PhaseThrough/phase_through.gd" id="1_cv784"]
[ext_resource type="PackedScene" uid="uid://ce0fyafaupkhg" path="res://Objects/Box/heavy_box.tscn" id="3_7rr5r"]
[ext_resource type="PackedScene" uid="uid://cf2nbw1l4orcf" path="res://Player/player.tscn" id="4_csdsv"]
[ext_resource type="PackedScene" uid="uid://binoy2bpne3jf" path="res://Objects/Door/Door.tscn" id="5_uxu4j"]
[ext_resource type="PackedScene" uid="uid://dfhxr5g4l6gg" path="res://Objects/Platforms/slide_platform.tscn" id="6_5ss6i"]
[ext_resource type="PackedScene" uid="uid://bjhkesuabemhh" path="res://Objects/Button/button.tscn" id="7_bdn6t"]
[ext_resource type="PackedScene" uid="uid://cc4n2fr13d1eh" path="res://Objects/DudDoor/DudDoor.tscn" id="8_7rr5r"]
[ext_resource type="PackedScene" uid="uid://bc4mudwsgjt1o" path="res://Objects/Portal/portal.tscn" id="9_e6xmr"]

[node name="PhaseThrough" type="Node2D"]
script = ExtResource("1_cv784")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAgABAAEAAAAAAAEAAgABAAEAAAAAAAIAAgABAAEAAAAAAAMAAgABAAEAAAAAAAQAAgABAAEAAAAAAAUAAgABAAEAAAAAAAYAAgABAAEAAAAAAAcAAgABAAEAAAAAAAgAAgABAAEAAAAAAAkAAgABAAEAAAAAAAoAAgABAAEAAAAAAAsAAgABAAEAAAAAAAwAAgABAAEAAAABAAoAAgABAAEAAAAAAA0AAgABAAEAAAAAAA4AAgABAAEAAAAAAA8AAgABAAEAAAAAABAAAgABAAEAAAAAABEAAgABAAEAAAAAABIAAgABAAEAAAABAAAAAgABAAEAAAABAAEAAgABAAEAAAABAAIAAgABAAEAAAABAAMAAgABAAEAAAABAAQAAgABAAEAAAABAAUAAgABAAEAAAABAAYAAgABAAEAAAABAAcAAgABAAEAAAABAAgAAgABAAEAAAABAAkAAgABAAEAAAABAA8AAgABAAEAAAABABAAAgABAAEAAAABABEAAgABAAEAAAABABIAAgABAAEAAAACAAAAAgABAAEAAAACAAEAAgABAAEAAAACAAIAAgABAAEAAAACAAMAAgABAAEAAAACAAQAAgABAAEAAAACAAUAAgABAAEAAAACAAYAAgABAAEAAAACAAcAAgABAAEAAAACAAgAAgABAAEAAAACAAkAAgABAAEAAAACAAoAAgABAAEAAAACAA8AAgABAAEAAAACABAAAgABAAEAAAACABEAAgABAAEAAAACABIAAgABAAEAAAADAAAAAgABAAEAAAADAAEAAgABAAEAAAADAAIAAgABAAEAAAADAAMAAgABAAEAAAADAAQAAgABAAEAAAADAAUAAgABAAEAAAADAAYAAgABAAEAAAADAAcAAgABAAEAAAADAAgAAgABAAEAAAADAAkAAgAAAAMAAAADABAAAgABAAEAAAADABEAAgABAAEAAAADABIAAgABAAEAAAAEAAAAAgABAAEAAAAEAAEAAgABAAEAAAAEAAIAAgABAAEAAAAEAAMAAgABAAEAAAAEAAQAAgABAAEAAAAEAAUAAgABAAEAAAAEAAYAAgABAAEAAAAEAAcAAgABAAEAAAAEAAgAAgABAAEAAAAEAAkAAgABAAIAAAAEABAAAgABAAEAAAAEABEAAgABAAEAAAAEABIAAgABAAEAAAAFAAAAAgABAAEAAAAFAAEAAgABAAEAAAAFABAAAgABAAEAAAAFABEAAgABAAEAAAAFABIAAgABAAEAAAAGAAAAAgABAAEAAAAGAAEAAgABAAEAAAAGABAAAgABAAEAAAAGABEAAgABAAEAAAAGABIAAgABAAEAAAAHAAAAAgABAAEAAAAHAAEAAgABAAEAAAAHABAAAgABAAEAAAAHABEAAgABAAEAAAAHABIAAgABAAEAAAAIAAAAAgABAAEAAAAIAAEAAgABAAEAAAAIABAAAgACAAEAAAAIABEAAgACAAEAAAAIABIAAgACAAMAAAAJAAAAAgABAAEAAAAJAAEAAgABAAEAAAAJABIAAgABAAAAAAAKAAAAAgABAAEAAAAKAAEAAgABAAEAAAAKABIAAgABAAAAAAALAAAAAgABAAEAAAALAAEAAgABAAEAAAALABIAAgAAAAQAAAAMAAAAAgABAAEAAAAMAAEAAgABAAEAAAAMABAAAgABAAEAAAAMABEAAgABAAEAAAAMABIAAgABAAEAAAANAAAAAgABAAEAAAANAAEAAgABAAEAAAANABAAAgABAAEAAAANABEAAgABAAEAAAANABIAAgABAAEAAAAOAAAAAgABAAEAAAAOAAEAAgABAAEAAAAOABAAAgABAAEAAAAOABEAAgABAAEAAAAOABIAAgABAAEAAAAPAAAAAgABAAEAAAAPAAEAAgABAAEAAAAPABAAAgABAAEAAAAPABEAAgABAAEAAAAPABIAAgABAAEAAAAQAAAAAgABAAEAAAAQAAEAAgABAAEAAAAQABAAAgABAAEAAAAQABEAAgABAAEAAAAQABIAAgABAAEAAAARAAAAAgABAAEAAAARAAEAAgABAAEAAAARABAAAgABAAEAAAARABEAAgABAAEAAAARABIAAgABAAEAAAASAAAAAgABAAEAAAASAAEAAgABAAEAAAASABAAAgABAAEAAAASABEAAgABAAEAAAASABIAAgABAAEAAAATAAAAAgABAAEAAAATAAEAAgABAAEAAAATABAAAgABAAEAAAATABEAAgABAAEAAAATABIAAgABAAEAAAAUAAAAAgABAAEAAAAUAAEAAgABAAEAAAAUABAAAgABAAEAAAAUABEAAgABAAEAAAAUABIAAgABAAEAAAAVAAAAAgABAAEAAAAVAAEAAgABAAEAAAAVABAAAgABAAEAAAAVABEAAgABAAEAAAAVABIAAgABAAEAAAAWAAAAAgABAAEAAAAWAAEAAgABAAEAAAAWABAAAgABAAEAAAAWABEAAgABAAEAAAAWABIAAgABAAEAAAAXAAAAAgABAAEAAAAXAAEAAgABAAEAAAAXABAAAgABAAEAAAAXABEAAgABAAEAAAAXABIAAgABAAEAAAAYAAAAAgABAAEAAAAYAAEAAgABAAEAAAAZAAAAAgABAAEAAAAZAAEAAgABAAEAAAAaAAAAAgABAAEAAAAaAAEAAgABAAEAAAAbAAAAAgABAAEAAAAbAAEAAgABAAEAAAAcAAAAAgABAAEAAAAcAAEAAgABAAEAAAAcAAIAAgABAAEAAAAcAAMAAgABAAEAAAAcAAQAAgABAAIAAAAcABAAAgABAAEAAAAcABEAAgABAAEAAAAcABIAAgABAAEAAAAdAAAAAgABAAEAAAAdAAEAAgABAAEAAAAdAAIAAgABAAEAAAAdAAMAAgABAAEAAAAdAAQAAgABAAIAAAAdABAAAgABAAEAAAAdABEAAgABAAEAAAAdABIAAgABAAEAAAAeAAAAAgABAAEAAAAeAAEAAgABAAEAAAAeAAIAAgABAAEAAAAeAAMAAgABAAEAAAAeAAQAAgABAAIAAAAeABAAAgABAAEAAAAeABEAAgABAAEAAAAeABIAAgABAAEAAAAfAAAAAgABAAEAAAAfAAEAAgABAAEAAAAfAAIAAgABAAEAAAAfAAMAAgABAAEAAAAfAAQAAgABAAIAAAAfABAAAgABAAEAAAAfABEAAgABAAEAAAAfABIAAgABAAEAAAAgAAAAAgABAAEAAAAgAAEAAgABAAEAAAAgAAIAAgABAAEAAAAgAAMAAgABAAEAAAAgAAQAAgABAAIAAAAgABAAAgABAAEAAAAgABEAAgABAAEAAAAgABIAAgABAAEAAAAFAAIAAgABAAEAAAAFAAMAAgABAAEAAAAGAAIAAgABAAEAAAAGAAMAAgABAAEAAAAHAAIAAgABAAEAAAAHAAMAAgABAAEAAAAIAAIAAgABAAEAAAAIAAMAAgABAAEAAAAJAAIAAgABAAEAAAAJAAMAAgABAAEAAAAKAAIAAgABAAEAAAAKAAMAAgABAAEAAAALAAIAAgABAAEAAAALAAMAAgABAAEAAAAMAAIAAgABAAEAAAAMAAMAAgABAAEAAAANAAIAAgABAAEAAAANAAMAAgABAAEAAAAOAAIAAgABAAEAAAAOAAMAAgABAAEAAAAPAAIAAgABAAEAAAAPAAMAAgABAAEAAAAQAAIAAgABAAEAAAAQAAMAAgABAAEAAAARAAIAAgABAAEAAAARAAMAAgABAAEAAAASAAIAAgABAAEAAAASAAMAAgABAAEAAAATAAIAAgABAAEAAAATAAMAAgABAAEAAAAUAAIAAgABAAEAAAAUAAMAAgABAAEAAAAVAAIAAgABAAEAAAAVAAMAAgABAAEAAAAWAAIAAgABAAEAAAAWAAMAAgABAAEAAAAXAAIAAgABAAEAAAAXAAMAAgABAAEAAAAYAAIAAgABAAEAAAAYAAMAAgABAAEAAAAZAAIAAgABAAEAAAAZAAMAAgABAAEAAAAaAAIAAgABAAEAAAAaAAMAAgABAAEAAAAbAAIAAgABAAEAAAAbAAMAAgABAAEAAAAMAA8AAgABAAAAAAANAA8AAgABAAAAAAAOAA8AAgABAAAAAAAPAA8AAgABAAAAAAAQAA8AAgABAAAAAAARAA8AAgABAAAAAAASAA8AAgABAAAAAAATAA8AAgABAAAAAAAUAA8AAgABAAAAAAAVAA8AAgABAAAAAAAWAA8AAgABAAAAAAAXAA8AAgABAAAAAAAFAAUAAgABAAEAAAAFAAYAAgABAAEAAAAFAAcAAgABAAEAAAAFAAgAAgABAAEAAAAFAAkAAgABAAIAAAAWAAQAAgABAAIAAAAXAAQAAgABAAIAAAAYAAQAAgABAAIAAAAZAAQAAgABAAIAAAAaAAQAAgABAAIAAAAbAAQAAgABAAIAAAAFAAQAAgABAAEAAAAGAAQAAgABAAEAAAAGAAUAAgABAAEAAAAGAAYAAgABAAEAAAAHAAQAAgABAAEAAAAHAAUAAgABAAEAAAAHAAYAAgABAAEAAAAIAAQAAgAAAAMAAAAJAAQAAgABAAIAAAAKAAQAAgABAAIAAAALAAQAAgABAAIAAAAMAAQAAgABAAIAAAANAAQAAgABAAIAAAAOAAQAAgABAAIAAAAPAAQAAgABAAIAAAAQAAQAAgABAAIAAAARAAQAAgABAAIAAAASAAQAAgABAAIAAAATAAQAAgABAAIAAAAUAAQAAgABAAIAAAAVAAQAAgABAAIAAAAAABMAAgABAAEAAAABABMAAgABAAEAAAACABMAAgABAAEAAAADABMAAgABAAEAAAAEABMAAgABAAEAAAAFABMAAgABAAEAAAAGABMAAgABAAEAAAAHABMAAgABAAEAAAAIABMAAgABAAEAAAAJABMAAgABAAEAAAAKABMAAgABAAEAAAALABMAAgABAAEAAAAMABMAAgABAAEAAAANABMAAgABAAEAAAAOABMAAgABAAEAAAAPABMAAgABAAEAAAAQABMAAgABAAEAAAARABMAAgABAAEAAAASABMAAgABAAEAAAATABMAAgABAAEAAAAUABMAAgABAAEAAAAVABMAAgABAAEAAAAWABMAAgABAAEAAAAXABMAAgABAAEAAAAcABMAAgABAAEAAAAdABMAAgABAAEAAAAeABMAAgABAAEAAAAfABMAAgABAAEAAAAgABMAAgABAAEAAAAhABAAAgABAAEAAAAhABEAAgABAAEAAAAhABIAAgABAAEAAAAhABMAAgABAAEAAAAiABAAAgABAAEAAAAiABEAAgABAAEAAAAiABIAAgABAAEAAAAiABMAAgABAAEAAAAjABAAAgABAAEAAAAjABEAAgABAAEAAAAjABIAAgABAAEAAAAjABMAAgABAAEAAAAkABAAAgABAAEAAAAkABEAAgABAAEAAAAkABIAAgABAAEAAAAkABMAAgABAAEAAAAlABMAAgABAAEAAAAiAA8AAgABAAAAAAAjAA8AAgABAAAAAAAkAA8AAgABAAAAAAAhAAAAAgABAAEAAAAhAAEAAgABAAEAAAAhAAIAAgABAAEAAAAhAAMAAgABAAEAAAAhAAQAAgABAAIAAAAiAAAAAgABAAEAAAAiAAEAAgABAAEAAAAiAAIAAgABAAEAAAAiAAMAAgABAAEAAAAiAAQAAgABAAIAAAAjAAAAAgABAAEAAAAjAAEAAgABAAEAAAAjAAIAAgABAAEAAAAjAAMAAgABAAEAAAAjAAQAAgABAAMAAAAkAAAAAgABAAEAAAAkAAEAAgABAAEAAAAkAAIAAgABAAEAAAAkAAMAAgABAAEAAAAkAAQAAgAAAAMAAAAlAAAAAgABAAEAAAAlAAEAAgABAAEAAAAlAAIAAgABAAEAAAAlAAMAAgABAAEAAAAlAAQAAgABAAIAAAAmAAAAAgABAAEAAAAmAAEAAgABAAEAAAAmAAIAAgABAAEAAAAmAAMAAgABAAEAAAAmAAQAAgABAAIAAAAnAAAAAgABAAEAAAAnAAEAAgABAAEAAAAnAAIAAgABAAEAAAAnAAMAAgABAAEAAAAnAAQAAgABAAIAAAAiABQAAgABAAEAAAAiABUAAgABAAEAAAAiABYAAgABAAEAAAAjABQAAgABAAEAAAAjABUAAgABAAEAAAAjABYAAgABAAEAAAAkABQAAgABAAEAAAAkABUAAgABAAEAAAAkABYAAgABAAEAAAAlABQAAgABAAEAAAAlABUAAgABAAEAAAAlABYAAgABAAEAAAAmABMAAgABAAEAAAAmABQAAgABAAEAAAAmABUAAgABAAEAAAAmABYAAgABAAEAAAAnAA8AAgABAAAAAAAnABAAAgABAAEAAAAnABEAAgABAAEAAAAnABIAAgABAAEAAAAnABMAAgABAAEAAAAnABQAAgABAAEAAAAnABUAAgABAAEAAAAnABYAAgABAAEAAAAAABQAAgABAAEAAAAAABUAAgABAAEAAAAAABYAAgABAAEAAAABABQAAgABAAEAAAABABUAAgABAAEAAAABABYAAgABAAEAAAACABQAAgABAAEAAAACABUAAgABAAEAAAACABYAAgABAAEAAAADABQAAgABAAEAAAADABUAAgABAAEAAAADABYAAgABAAEAAAAEABQAAgABAAEAAAAEABUAAgABAAEAAAAEABYAAgABAAEAAAAFABQAAgABAAEAAAAFABUAAgABAAEAAAAFABYAAgABAAEAAAAGABQAAgABAAEAAAAGABUAAgABAAEAAAAGABYAAgABAAEAAAAHABQAAgABAAEAAAAHABUAAgABAAEAAAAHABYAAgABAAEAAAAIABQAAgABAAEAAAAIABUAAgABAAEAAAAIABYAAgABAAEAAAAJABQAAgABAAEAAAAJABUAAgABAAEAAAAJABYAAgABAAEAAAAKABQAAgABAAEAAAAKABUAAgABAAEAAAAKABYAAgABAAEAAAALABQAAgABAAEAAAALABUAAgABAAEAAAALABYAAgABAAEAAAAMABQAAgABAAEAAAAMABUAAgABAAEAAAAMABYAAgABAAEAAAANABQAAgABAAEAAAANABUAAgABAAEAAAANABYAAgABAAEAAAAOABQAAgABAAEAAAAOABUAAgABAAEAAAAOABYAAgABAAEAAAAPABQAAgABAAEAAAAPABUAAgABAAEAAAAPABYAAgABAAEAAAAQABQAAgABAAEAAAAQABUAAgABAAEAAAAQABYAAgABAAEAAAARABQAAgABAAEAAAARABUAAgABAAEAAAARABYAAgABAAEAAAASABQAAgABAAEAAAASABUAAgABAAEAAAASABYAAgABAAEAAAATABQAAgABAAEAAAATABUAAgABAAEAAAATABYAAgABAAEAAAAUABQAAgABAAEAAAAUABUAAgABAAEAAAAUABYAAgABAAEAAAAVABQAAgABAAEAAAAVABUAAgABAAEAAAAVABYAAgABAAEAAAAWABQAAgABAAEAAAAWABUAAgABAAEAAAAWABYAAgABAAEAAAAXABQAAgABAAEAAAAXABUAAgABAAEAAAAXABYAAgABAAEAAAAYABQAAgABAAEAAAAYABUAAgABAAEAAAAYABYAAgABAAEAAAAZABQAAgABAAEAAAAZABUAAgABAAEAAAAZABYAAgABAAEAAAAaABQAAgABAAEAAAAaABUAAgABAAEAAAAaABYAAgABAAEAAAAbABQAAgABAAEAAAAbABUAAgABAAEAAAAbABYAAgABAAEAAAAcABQAAgABAAEAAAAcABUAAgABAAEAAAAcABYAAgABAAEAAAAdABQAAgABAAEAAAAdABUAAgABAAEAAAAdABYAAgABAAEAAAAeABQAAgABAAEAAAAeABUAAgABAAEAAAAeABYAAgABAAEAAAAfABQAAgABAAEAAAAfABUAAgABAAEAAAAfABYAAgABAAEAAAAgABQAAgABAAEAAAAgABUAAgABAAEAAAAgABYAAgABAAEAAAAhABQAAgABAAEAAAAhABUAAgABAAEAAAAhABYAAgABAAEAAAAoAAAAAgABAAEAAAAoAAEAAgABAAEAAAAoAAIAAgABAAEAAAAoAAMAAgABAAEAAAAoAAQAAgABAAMAAAAoAA8AAgABAAAAAAAoABAAAgABAAEAAAAoABEAAgABAAEAAAAoABIAAgABAAEAAAAoABMAAgABAAEAAAAoABQAAgABAAEAAAAoABUAAgABAAEAAAAoABYAAgABAAEAAAApAAAAAgABAAEAAAApAAEAAgABAAEAAAApAAIAAgABAAEAAAApAAMAAgABAAEAAAApAAQAAgABAAEAAAApAA8AAgABAAAAAAApABAAAgABAAEAAAApABEAAgABAAEAAAApABIAAgABAAEAAAApABMAAgABAAEAAAApABQAAgABAAEAAAApABUAAgABAAEAAAApABYAAgABAAEAAAAqAAAAAgABAAEAAAAqAAEAAgABAAEAAAAqAAIAAgABAAEAAAAqAAMAAgABAAEAAAAqAAQAAgABAAEAAAAqAA8AAgAAAAQAAAAqABAAAgABAAEAAAAqABEAAgABAAEAAAAqABIAAgABAAEAAAAqABMAAgABAAEAAAAqABQAAgABAAEAAAAqABUAAgABAAEAAAAqABYAAgABAAEAAAArAAAAAgABAAEAAAArAAEAAgABAAEAAAArAAIAAgABAAEAAAArAAMAAgABAAEAAAArAAQAAgABAAEAAAArAAUAAgABAAEAAAArAAYAAgABAAMAAAArAAcAAgAAAAEAAAArAAgAAgAAAAEAAAArAAkAAgAAAAEAAAArAAoAAgAAAAQAAAArAA8AAgABAAEAAAArABAAAgABAAEAAAArABEAAgABAAEAAAArABIAAgABAAEAAAArABMAAgABAAEAAAArABQAAgABAAEAAAArABUAAgABAAEAAAArABYAAgABAAEAAAAsAAAAAgABAAEAAAAsAAEAAgABAAEAAAAsAAIAAgABAAEAAAAsAAMAAgABAAEAAAAsAAQAAgABAAEAAAAsAAUAAgABAAEAAAAsAAYAAgABAAEAAAAsAAcAAgABAAEAAAAsAAgAAgABAAEAAAAsAAkAAgABAAEAAAAsAAoAAgABAAEAAAAsAA8AAgABAAEAAAAsABAAAgABAAEAAAAsABEAAgABAAEAAAAsABIAAgABAAEAAAAsABMAAgABAAEAAAAsABQAAgABAAEAAAAsABUAAgABAAEAAAAsABYAAgABAAEAAAAtAAAAAgABAAEAAAAtAAEAAgABAAEAAAAtAAIAAgABAAEAAAAtAAMAAgABAAEAAAAtAAQAAgABAAEAAAAtAAUAAgABAAEAAAAtAAYAAgABAAEAAAAtAAcAAgABAAEAAAAtAAgAAgABAAEAAAAtAAkAAgABAAEAAAAtAAoAAgABAAEAAAAtAAsAAgABAAEAAAAtAAwAAgABAAEAAAAtAA0AAgABAAEAAAAtAA4AAgABAAEAAAAtAA8AAgABAAEAAAAtABAAAgABAAEAAAAtABEAAgABAAEAAAAtABIAAgABAAEAAAAtABMAAgABAAEAAAAtABQAAgABAAEAAAAtABUAAgABAAEAAAAtABYAAgABAAEAAAAuAAAAAgABAAEAAAAuAAEAAgABAAEAAAAuAAIAAgABAAEAAAAuAAMAAgABAAEAAAAuAAQAAgABAAEAAAAuAAUAAgABAAEAAAAuAAYAAgABAAEAAAAuAAcAAgABAAEAAAAuAAgAAgABAAEAAAAuAAkAAgABAAEAAAAuAAoAAgABAAEAAAAuAAsAAgABAAEAAAAuAAwAAgABAAEAAAAuAA0AAgABAAEAAAAuAA4AAgABAAEAAAAuAA8AAgABAAEAAAAuABAAAgABAAEAAAAuABEAAgABAAEAAAAuABIAAgABAAEAAAAuABMAAgABAAEAAAAuABQAAgABAAEAAAAuABUAAgABAAEAAAAuABYAAgABAAEAAAAvAAAAAgABAAEAAAAvAAEAAgABAAEAAAAvAAIAAgABAAEAAAAvAAMAAgABAAEAAAAvAAQAAgABAAEAAAAvAAUAAgABAAEAAAAvAAYAAgABAAEAAAAvAAcAAgABAAEAAAAvAAgAAgABAAEAAAAvAAkAAgABAAEAAAAvAAoAAgABAAEAAAAvAAsAAgABAAEAAAAvAAwAAgABAAEAAAAvAA0AAgABAAEAAAAvAA4AAgABAAEAAAAvAA8AAgABAAEAAAAvABAAAgABAAEAAAAvABEAAgABAAEAAAAvABIAAgABAAEAAAAvABMAAgABAAEAAAAvABQAAgABAAEAAAAvABUAAgABAAEAAAAvABYAAgABAAEAAAAwAAAAAgABAAEAAAAwAAEAAgABAAEAAAAwAAIAAgABAAEAAAAwAAMAAgABAAEAAAAwAAQAAgABAAEAAAAwAAUAAgABAAEAAAAwAAYAAgABAAEAAAAwAAcAAgABAAEAAAAwAAgAAgABAAEAAAAwAAkAAgABAAEAAAAwAAoAAgABAAEAAAAwAAsAAgABAAEAAAAwAAwAAgABAAEAAAAwAA0AAgABAAEAAAAwAA4AAgABAAEAAAAwAA8AAgABAAEAAAAwABAAAgABAAEAAAAwABEAAgABAAEAAAAwABIAAgABAAEAAAAwABMAAgABAAEAAAAwABQAAgABAAEAAAAwABUAAgABAAEAAAAwABYAAgABAAEAAAAxAAAAAgABAAEAAAAxAAEAAgABAAEAAAAxAAIAAgABAAEAAAAxAAMAAgABAAEAAAAxAAQAAgABAAEAAAAxAAUAAgABAAEAAAAxAAYAAgABAAEAAAAxAAcAAgABAAEAAAAxAAgAAgABAAEAAAAxAAkAAgABAAEAAAAxAAoAAgABAAEAAAAxAAsAAgABAAEAAAAxAAwAAgABAAEAAAAxAA0AAgABAAEAAAAxAA4AAgABAAEAAAAxAA8AAgABAAEAAAAxABAAAgABAAEAAAAxABEAAgABAAEAAAAxABIAAgABAAEAAAAxABMAAgABAAEAAAAxABQAAgABAAEAAAAxABUAAgABAAEAAAAxABYAAgABAAEAAAAyAAAAAgABAAEAAAAyAAEAAgABAAEAAAAyAAIAAgABAAEAAAAyAAMAAgABAAEAAAAyAAQAAgABAAEAAAAyAAUAAgABAAEAAAAyAAYAAgABAAEAAAAyAAcAAgABAAEAAAAyAAgAAgABAAEAAAAyAAkAAgABAAEAAAAyAAoAAgABAAEAAAAyAAsAAgABAAEAAAAyAAwAAgABAAEAAAAyAA0AAgABAAEAAAAyAA4AAgABAAEAAAAyAA8AAgABAAEAAAAyABAAAgABAAEAAAAyABEAAgABAAEAAAAyABIAAgABAAEAAAAyABMAAgABAAEAAAAyABQAAgABAAEAAAAyABUAAgABAAEAAAAyABYAAgABAAEAAAAzAAAAAgABAAEAAAAzAAEAAgABAAEAAAAzAAIAAgABAAEAAAAzAAMAAgABAAEAAAAzAAQAAgABAAEAAAAzAAUAAgABAAEAAAAzAAYAAgABAAEAAAAzAAcAAgABAAEAAAAzAAgAAgABAAEAAAAzAAkAAgABAAEAAAAzAAoAAgABAAEAAAAzAAsAAgABAAEAAAAzAAwAAgABAAEAAAAzAA0AAgABAAEAAAAzAA4AAgABAAEAAAAzAA8AAgABAAEAAAAzABAAAgABAAEAAAAzABEAAgABAAEAAAAzABIAAgABAAEAAAAzABMAAgABAAEAAAAzABQAAgABAAEAAAAzABUAAgABAAEAAAAzABYAAgABAAEAAAA0AAAAAgABAAEAAAA0AAEAAgABAAEAAAA0AAIAAgABAAEAAAA0AAMAAgABAAEAAAA0AAQAAgABAAEAAAA0AAUAAgABAAEAAAA0AAYAAgABAAEAAAA0AAcAAgABAAEAAAA0AAgAAgABAAEAAAA0AAkAAgABAAEAAAA0AAoAAgABAAEAAAA0AAsAAgABAAEAAAA0AAwAAgABAAEAAAA0AA0AAgABAAEAAAA0AA4AAgABAAEAAAA0AA8AAgABAAEAAAA0ABAAAgABAAEAAAA0ABEAAgABAAEAAAA0ABIAAgABAAEAAAA0ABMAAgABAAEAAAA0ABQAAgABAAEAAAA0ABUAAgABAAEAAAA0ABYAAgABAAEAAAAYAA8AAgABAAAAAAAZAA8AAgABAAAAAAAaAA8AAgABAAAAAAAbAA8AAgABAAAAAAAcAA8AAgABAAAAAAAdAA8AAgABAAAAAAAeAA8AAgABAAAAAAAfAA8AAgABAAAAAAAgAA8AAgABAAAAAAAhAA8AAgABAAAAAAAYABAAAgABAAEAAAAYABEAAgABAAEAAAAYABIAAgABAAEAAAAYABMAAgABAAEAAAAZABAAAgABAAEAAAAZABEAAgABAAEAAAAZABIAAgABAAEAAAAZABMAAgABAAEAAAAaABAAAgABAAEAAAAaABEAAgABAAEAAAAaABIAAgABAAEAAAAaABMAAgABAAEAAAAbABAAAgABAAEAAAAbABEAAgABAAEAAAAbABIAAgABAAEAAAAbABMAAgABAAEAAAAlAA8AAgABAAAAAAAmAA8AAgABAAAAAAAlABAAAgABAAEAAAAlABEAAgABAAEAAAAlABIAAgABAAEAAAAmABAAAgABAAEAAAAmABEAAgABAAEAAAAmABIAAgABAAEAAAAqAAwAAgABAAMAAAAqAA0AAgAAAAEAAAAqAA4AAgAAAAEAAAArAAsAAgABAAEAAAArAAwAAgABAAEAAAArAA0AAgABAAEAAAArAA4AAgABAAEAAAAsAAsAAgABAAEAAAAsAAwAAgABAAEAAAAsAA0AAgABAAEAAAAsAA4AAgABAAEAAAAIAA8AAgACAAAAAAALAA8AAgAAAAAAAAALABAAAgAAAAEAAAALABEAAgAAAAEAAAApAAwAAgABAAIAAAAoAAwAAgAAAAIAAAAIAAUAAgACAAEAAAAIAAYAAgACAAEAAAALAAkAAgABAAAAAAALAAoAAgABAAIAAAAMAAkAAgABAAAAAAAMAAoAAgABAAIAAAANAAkAAgABAAAAAAANAAoAAgABAAIAAAAOAAkAAgABAAAAAAAOAAoAAgABAAIAAAAPAAkAAgABAAAAAAAPAAoAAgABAAIAAAAQAAkAAgABAAAAAAAQAAoAAgABAAIAAAARAAkAAgABAAAAAAARAAoAAgABAAIAAAASAAkAAgABAAAAAAASAAoAAgABAAIAAAATAAkAAgABAAAAAAATAAoAAgABAAIAAAAUAAkAAgABAAAAAAAUAAoAAgABAAIAAAAVAAkAAgABAAAAAAAVAAoAAgABAAIAAAAWAAkAAgABAAAAAAAWAAoAAgABAAIAAAAXAAkAAgABAAAAAAAXAAoAAgABAAIAAAAYAAkAAgABAAAAAAAYAAoAAgABAAIAAAAZAAkAAgABAAAAAAAZAAoAAgABAAIAAAAaAAkAAgABAAAAAAAaAAoAAgABAAIAAAAbAAkAAgABAAAAAAAbAAoAAgABAAIAAAAcAAkAAgABAAAAAAAcAAoAAgABAAIAAAAdAAkAAgABAAAAAAAdAAoAAgABAAIAAAAeAAkAAgABAAAAAAAeAAoAAgABAAIAAAAfAAkAAgABAAAAAAAfAAoAAgABAAIAAAAgAAkAAgABAAAAAAAgAAoAAgABAAIAAAAhAAkAAgABAAAAAAAhAAoAAgABAAIAAAAiAAkAAgABAAAAAAAiAAoAAgABAAIAAAAjAAkAAgAAAAQAAAAjAAoAAgABAAIAAAAkAAkAAgACAAEAAAAkAAoAAgACAAIAAAAoAAUAAgAAAAEAAAAoAAYAAgAAAAIAAAAoAAoAAgAAAAAAAAApAAUAAgABAAEAAAApAAYAAgABAAIAAAApAAoAAgABAAAAAAAqAAUAAgABAAEAAAAqAAYAAgABAAIAAAAqAAoAAgABAAAAAAAoAAsAAgAAAAEAAAApAAsAAgABAAEAAAAqAAsAAgABAAEAAAADAAoAAgACAAEAAAADAA8AAgACAAMAAAAEAA8AAgABAAAAAAAFAA8AAgABAAAAAAAGAA8AAgABAAAAAAAHAA8AAgABAAAAAAADAAsAAgACAAEAAAADAAwAAgACAAEAAAADAA0AAgACAAEAAAADAA4AAgACAAEAAAD//woAAgABAAEAAAD//wsAAgABAAEAAAD//wwAAgABAAEAAAD//w0AAgABAAEAAAD//w4AAgABAAEAAAD//w8AAgABAAEAAAD//xAAAgABAAEAAAABAAsAAgABAAEAAAABAAwAAgABAAEAAAABAA0AAgABAAEAAAABAA4AAgABAAEAAAACAAsAAgABAAEAAAACAAwAAgABAAEAAAACAA0AAgABAAEAAAACAA4AAgABAAEAAAAHAAoAAgAAAAIAAAAIAAoAAgABAAIAAAAJAAoAAgABAAIAAAAKAAoAAgABAAIAAAAJAAkAAgABAAAAAAAKAAkAAgABAAAAAAAIAAkAAgACAAMAAAAIAAcAAgACAAEAAAAIAAgAAgACAAEAAAAGAAcAAgABAAEAAAAGAAgAAgABAAEAAAAGAAkAAgABAAIAAAAHAAcAAgABAAEAAAAHAAgAAgABAAEAAAAHAAkAAgABAAMAAAAkAAUAAgACAAEAAAAkAAYAAgACAAEAAAAkAAcAAgACAAEAAAAkAAgAAgACAAEAAAAjAAUAAgAAAAEAAAAjAAYAAgAAAAEAAAAjAAcAAgAAAAEAAAAjAAgAAgAAAAEAAAA=")
tile_set = ExtResource("1_b5gln")

[node name="HeavyBox" parent="." instance=ExtResource("3_7rr5r")]
position = Vector2(198, 222)
scale = Vector2(1.1, 1.1)

[node name="Player" parent="." instance=ExtResource("4_csdsv")]
position = Vector2(157, 239)

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(2, 2)
limit_left = 0
limit_top = 0
limit_right = 700
limit_bottom = 0

[node name="HeavyBox2" parent="." instance=ExtResource("3_7rr5r")]
position = Vector2(562, 208)
scale = Vector2(1.9, 1.9)

[node name="Door" parent="." instance=ExtResource("5_uxu4j")]
position = Vector2(272, 112)

[node name="SlidePlatform" parent="." instance=ExtResource("6_5ss6i")]
position = Vector2(216, 112)
rotation = 1.5708

[node name="Endpoint" parent="SlidePlatform" index="0"]
position = Vector2(646, 104)

[node name="Button" parent="." instance=ExtResource("7_bdn6t")]
position = Vector2(161, 288)

[node name="DudDoor" parent="." instance=ExtResource("8_7rr5r")]
z_index = -1
position = Vector2(101, 208)

[node name="Portal" parent="." instance=ExtResource("9_e6xmr")]
position = Vector2(64, 221)

[node name="Portal2" parent="." instance=ExtResource("9_e6xmr")]
position = Vector2(669, 225)

[node name="SlidePlatform2" parent="." instance=ExtResource("6_5ss6i")]
position = Vector2(160, 246)
scale = Vector2(0.5, 0.5)

[node name="Button2" parent="." instance=ExtResource("7_bdn6t")]
position = Vector2(666, 160)

[node name="Portal3" parent="." instance=ExtResource("9_e6xmr")]
position = Vector2(65, 180)
color = 1

[node name="Portal4" parent="." instance=ExtResource("9_e6xmr")]
position = Vector2(146, 122)
color = 1

[connection signal="just_pressed" from="Button" to="." method="_on_button_just_pressed"]
[connection signal="just_unpressed" from="Button" to="." method="_on_button_just_unpressed"]
[connection signal="just_pressed" from="Button2" to="." method="_on_button_2_just_pressed"]
[connection signal="just_unpressed" from="Button2" to="." method="_on_button_2_just_unpressed"]

[editable path="SlidePlatform"]
